--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,50 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-image: url('http://getwallpapers.com/wallpaper/full/a/9/b/234686.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   color: white;
+  height: 100vh;
+  margin-top: 0%;
 }
 
-.App-link {
-  color: #09d3ac;
+h1{
+  margin-bottom:10px ;
 }
+body{
+  margin : 0px !important;
+}
+
+.img{
+  max-width: 100%;
+  height: 60vh;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+  body {
+    background-color: #F09A9D; /* Red */
+  }
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+  body {
+    background-color: #F5CF8E; /* Yellow */
+  }
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 961px) {
+  body {
+    background-color: #B2D6FF; /* Blue */
+  }
+}
+
